--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -19,7 +19,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
     <script src="js/ng-cordova.js"></script>
-    <script src="cordova.js"></script>
+    <!-- <script src="cordova.js"></script> -->
 
     <!-- your app's js -->
     <script src="js/main.js"></script>
