pin color drops in from the sky as the current color instead of red

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -82,7 +82,7 @@
                     </p>
                 </div>
                 <div class="col-md-5 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
+                    <img class="img-responsive" src="img/phones.png" alt="">
                 </div>
             </div>
 
@@ -140,7 +140,7 @@
                     </p>
                 </div>
                 <div class="col-lg-5 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
+                    <img class="img-responsive" src="img/beer-pic.png" alt="">
                 </div>
             </div>
 
