--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -42,7 +42,7 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>Word on the Street </h1>
-                        <h3>Leave a geo-located message for your friends.</h3>
+                        <h3>Leave a geo-located messages for your friends.</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
@@ -52,6 +52,8 @@
                                 <a href="mobile.html"><img src ="/img/applestore.png"></a>
                             </li>
                         </ul>
+                        <hr class="intro-divider">
+                        <a href="demo-day-scavenger-hunt.html" class="btn btn-primary">Scavenger Hunt</a>
                     </div>
                 </div>
             </div>
