added scavenger hunt page challenges

--- a/ionic/www/demo-day-scavenger-hunt.html
+++ b/ionic/www/demo-day-scavenger-hunt.html
@@ -34,7 +34,6 @@
 </head>
 
 <body>
-    <!-- Header -->
     <div class="intro-header">
 
         <div class="container">
@@ -46,18 +45,17 @@
                         <h3>Demo Day Scavenger Hunt!</h3>
                         <hr class="intro-divider">
                          <div class="list-group">
-                          <a href="#" class="list-group-item active">What's big and brown and smells real bad?</a>
-                          <a href="#" class="list-group-item">I'm underground and people ride me.</a>
-                          <a href="#" class="list-group-item">I'm close to a before a Windows OS.</a>
-                          <a href="#" class="list-group-item">Porta ac consectetur ac</a>
-                          <a href="#" class="list-group-item">Vestibulum at eros</a>
+                          <a href="#" class="list-group-item active">What's big and brown and smells real bad? (pile of out back)</a>
+                          <a href="#" class="list-group-item">I'm underground and people ride me. (Subway on Hastings)</a>
+                          <a href="#" class="list-group-item">I'm close to a before a Windows OS. (EXP bar on pender)</a>
+                          <a href="#" class="list-group-item">I've got doors taller than Hogwarts. (55 Dunlevy)</a>
+                          <a href="#" class="list-group-item">I'm a lion hear me roar!...and play soccer. (BC Place)</a>
                         </div>
                     </div>
                 </div>
             </div>
 
         </div>
-        <!-- /.container -->
 
     </div>
 
