--- a/ionic/platforms/android/assets/www/index.html
+++ b/ionic/platforms/android/assets/www/index.html
@@ -17,9 +17,11 @@
     <!-- Custom CSS -->
     <link href="css/landing-page.css" rel="stylesheet">
 
+
     <!-- Custom Fonts -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -40,7 +42,7 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>Word on the Street </h1>
-                        <h3>Leave a geo-located message for your friends.</h3>
+                        <h3>Leave a geo-located messages for your friends.</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
@@ -50,6 +52,8 @@
                                 <a href="mobile.html"><img src ="/img/applestore.png"></a>
                             </li>
                         </ul>
+                        <hr class="intro-divider">
+                        <a href="demo-day-scavenger-hunt.html" class="btn btn-primary">Scavenger Hunt</a>
                     </div>
                 </div>
             </div>
@@ -67,14 +71,20 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-5 col-sm-6">
+                <div class="col-md-7 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Use Case 1</h2>
-                    <p class="lead">Jean shorts flannel meh leggings, cred Marfa Echo Park. Tofu XOXO disrupt typewriter aesthetic. Banjo retro vegan, fingerstache normcore sustainable cred fap. Bespoke Shoreditch before they sold out, +1 lomo Etsy scenester distillery heirloom PBR Bushwick salvia kogi tote bag tousled. Narwhal meditation lumbersexual Carles cronut butcher, Williamsburg Banksy cardigan cornhole four loko Brooklyn biodiesel food truck.</p>
+                    <h2 class="section-heading">
+                      <span class="beer-symbol">&#9734; </span>Drop your Beer Bud a Word<span class="beer-symbol"> &#9734;</span>
+                    </h2>
+                    <p class="lead">
+                      Your beer lovin buddy, James, takes the same path to work everyday 
+                      which happens to pass his favourite brewery. Drop him a Word at the entrance
+                      to let him know about a hoppin new IPA!
+                    </p>
                 </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
+                <div class="col-md-5 col-sm-6">
+                    <img class="img-responsive" src="img/phones.png" alt="">
                 </div>
             </div>
 
@@ -89,15 +99,22 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                <div class="col-lg-6 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Use Case 2</h2>
-                    <p class="lead">Jean shorts flannel meh leggings, cred Marfa Echo Park. Tofu XOXO disrupt typewriter aesthetic. Banjo retro vegan, fingerstache normcore sustainable cred fap. Bespoke Shoreditch before they sold out, +1 lomo Etsy scenester distillery heirloom PBR Bushwick salvia kogi tote bag tousled. Narwhal meditation lumbersexual Carles cronut butcher, Williamsburg Banksy cardigan cornhole four loko Brooklyn biodiesel food truck.</p>
+                    <h2 class="section-heading">
+                      <span class="love-symbol">&#9825; </span>Leave a Love Note<span class="love-symbol"> &#9825;</span>
+                    </h2>
+                    <p class="lead">
+                      Petu&ntilde;a, your sweet pea, walks down Cambie by 4th every weekday.
+                      She's been having a tough week with all those TPS reports due.
+                      Leave her a secret love note for her to discover and brighten her day.
+                    </p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/dog.png" alt="">
                 </div>
+
             </div>
 
         </div>
@@ -111,14 +128,21 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-5 col-sm-6">
+                <div class="col-lg-7 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Use Case 3</h2>
-                    <p class="lead">Jean shorts flannel meh leggings, cred Marfa Echo Park. Tofu XOXO disrupt typewriter aesthetic. Banjo retro vegan, fingerstache normcore sustainable cred fap. Bespoke Shoreditch before they sold out, +1 lomo Etsy scenester distillery heirloom PBR Bushwick salvia kogi tote bag tousled. Narwhal meditation lumbersexual Carles cronut butcher, Williamsburg Banksy cardigan cornhole four loko Brooklyn biodiesel food truck.</p>
+                    <h2 class="section-heading">
+                      <span class="hunt-symbol">&#9762; </span>Host a Street Scavenger Hunt<span class="hunt-symbol"> &#9762;</span>
+                    </h2>
+                    <p class="lead">
+                    Your mission, if you choose it, is to locate all of the top secret
+                    priceless cookie jar key codes scattered through Van City. Race through
+                    bustling city to retrieve the key codes before they fall into enemy hands.
+                    This message will self-destruct in 5....
+                    </p>
                 </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
+                <div class="col-lg-5 col-sm-6">
+                    <img class="img-responsive" src="img/beer-pic.png" alt="">
                 </div>
             </div>
 
