--- a/ionic/platforms/android/assets/www/mobile.html
+++ b/ionic/platforms/android/assets/www/mobile.html
@@ -127,9 +127,8 @@
         <ion-content>
           <form>
             <div class="list">
-              <label class="item item-input">
-                <input type="text" placeholder="username" class="lowercase" id="recipient" maxlength="50" required>
-              </label>
+            <autocomplete ng-model="yourchoice" data="recipientNames" on-select="grabInput" on-type="updateRecipientNames" name="recipient" id="recipient" maxlength="50" type="text"required></autocomplete>
+            
               <label class="item item-input">
                 <textarea placeholder="Message..." rows="3" class="lowercase" id="message" maxlength="140" required></textarea>
               </label>  
