autocomplete done with cordova working

--- a/ionic/platforms/android/assets/www/mobile.html
+++ b/ionic/platforms/android/assets/www/mobile.html
@@ -128,9 +128,9 @@
           <form>
             <div class="list">
             <autocomplete ng-model="yourchoice" data="recipientNames" on-select="grabInput" on-type="updateRecipientNames" name="recipient" id="recipient" maxlength="50" type="text"required></autocomplete>
-            
+
               <label class="item item-input">
-                <textarea placeholder="Message..." rows="3" class="lowercase" id="message" maxlength="140" required></textarea>
+                <textarea placeholder="message..." rows="3" id="message" maxlength="140" required></textarea>
               </label>  
             <ion-toggle 
               ng-model="pinType.checked"
