added landing page files to current dev build

--- a/ionic/www/demo-day-scavenger-hunt.html
+++ b/ionic/www/demo-day-scavenger-hunt.html
@@ -41,23 +41,65 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Word on the Street </h1>
                         <h3>Demo Day Scavenger Hunt!</h3>
                         <hr class="intro-divider">
                          <div class="list-group">
-                          <a href="#" class="list-group-item active">What's big and brown and smells real bad? (pile of out back)</a>
-                          <a href="#" class="list-group-item">I'm underground and people ride me. (Subway on Hastings)</a>
-                          <a href="#" class="list-group-item">I'm close to a before a Windows OS. (EXP bar on pender)</a>
-                          <a href="#" class="list-group-item">I've got doors taller than Hogwarts. (55 Dunlevy)</a>
-                          <a href="#" class="list-group-item">I'm a lion hear me roar!...and play soccer. (BC Place)</a>
+                          <a href="#" class="list-group-item active"><span class="beer-symbol">&#9734; </span>Instructions<span class="beer-symbol"> &#9734;</span></a>
+                          <a href="#" class="list-group-item">Grab your phone, your brother's phone, any <span class="text-standout">Android</span> phone!</a>
+                          <a href="#" class="list-group-item">Turn on that GPS location services on it!</a>
+                          <a href="#" class="list-group-item">Make sure that sucker has some battery life! There are prizes to be won!</a>
+                          <a href="#" class="list-group-item">Wait til the demos are done, or not ;) ......and run like hell!</a>
+                          <a href="#" class="list-group-item">Scroll down to find hints!</a>                          
                         </div>
                     </div>
                 </div>
             </div>
-
+            <hr class="intro-divider">
+            <ul class="list-inline intro-social-buttons">
+                <li>
+                  <a href="https://play.google.com/store/apps/details?id=com.ionicframework.wordonthestreet"><img class="platform-version-button" src ="/img/android-version.png" title="Android Version"></a>
+                </li>
+                <li>
+                  <a href="mobile.html"><img class="platform-version-button" src ="/img/mobile-version.png" title="Web Version"></a>  
+                </li>
+            </ul>
+            <hr class="intro-divider">            
         </div>
 
     </div>
+
+    <div class="hints-header">
+
+       <div class="container">
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="intro-message hint-list-message">
+                         <div class="list-group">
+                            <a href="#" class="list-group-item active"><span class="beer-symbol">&#9734; </span>Hints<span class="beer-symbol"> &#9734;</span></a>
+                            <a href="#" class="list-group-item">I'm a lion hear me roar!...and play soccer.</a>
+                            <a href="#" class="list-group-item">Where you find nerds before the time of the interweb.</a>
+                            <a href="#" class="list-group-item">Who puts grass on a long roof!? A slanty roof too!? Come on!</a>
+                            <a href="#" class="list-group-item">Some kind of magical timekeeping steampunk device on the street.</a>
+                            <a href="#" class="list-group-item">Is Free Willy home...? No, just penguins.</a>                  
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr class="intro-divider">
+            <ul class="list-inline intro-social-buttons">
+                <li>
+                  <a href="https://play.google.com/store/apps/details?id=com.ionicframework.wordonthestreet"><img class="platform-version-button" src ="/img/android-version.png" title="Android Version"></a>
+                </li>
+                <li>
+                  <a href="mobile.html"><img class="platform-version-button" src ="/img/mobile-version.png" title="Web Version"></a>  
+                </li>
+            </ul>
+            <hr class="intro-divider">  
+        </div>
+
+    </div>
+    <!-- /.content-section-a -->    
 
 </body>
 
