--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -46,10 +46,10 @@
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <img src ="/img/playstore.png">
+                              <a href="https://play.google.com/store/apps/details?id=com.ionicframework.wordonthestreet"><img class="platform-version-button" src ="/img/android-version.png" title="Android Version"></a>
                             </li>
                             <li>
-                                <a href="mobile.html"><img src ="/img/applestore.png"></a>
+                              <a href="mobile.html"><img class="platform-version-button" src ="/img/mobile-version.png" title="Web Version"></a>  
                             </li>
                         </ul>
                         <hr class="intro-divider">
@@ -142,7 +142,7 @@
                     </p>
                 </div>
                 <div class="col-lg-5 col-sm-6">
-                    <img class="img-responsive" src="img/beer-pic.png" alt="">
+                    <img class="img-responsive" src="img/ipad.png" alt="">
                 </div>
             </div>
 
