--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -158,7 +158,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="copyright text-muted small">Created by Ben Sanders, Jody Chambers, and James Matsuba</p>
+                    <p class="copyright text-muted small">Created by <a href="https://github.com/8ENs" target="_blank">Ben Sanders</a>, <a href="https://github.com/jebididas" target="_blank">Jody Chambers</a>, and <a href="https://github.com/jmatsuba" target="_blank">James Matsuba</a></p>
                 </div>
             </div>
         </div>
