added refresh button

--- a/ionic/www/mobile.html
+++ b/ionic/www/mobile.html
@@ -54,6 +54,7 @@
 
     <ion-footer-bar class="bar-stable">
         <a ng-click="centerCurrentLocation()" id="nav_center_loc" class="button button-icon icon ion-android-locate" style="display: none"></a>
+        <a ng-click="refreshMap()" id="nav_refresh" class="button button-icon icon ion-loop" style="display: none"></a>
         <a ng-click="openModal(4)" id="nav_explore" class="button button-icon icon ion-social-buffer" style="display: none">Explore</a>
     </ion-footer-bar>  
       </ion-view>
