--- a/ionic/www/demo-day-scavenger-hunt.html
+++ b/ionic/www/demo-day-scavenger-hunt.html
@@ -57,7 +57,7 @@
             <hr class="intro-divider">
             <ul class="list-inline intro-social-buttons">
                 <li>
-                  <a href="https://play.google.com/store/apps/details?id=com.ionicframework.wordonthestreet"><img class="platform-version-button" src ="/img/android-version.png" title="Android Version"></a>
+                  <a href="https://play.google.com/store/apps/details?id=com.ionicframework.wordonthestreet" target="_blank"><img class="platform-version-button" src ="/img/android-version.png" title="Android Version"></a>
                 </li>
                 <li>
                   <a href="mobile.html"><img class="platform-version-button" src ="/img/mobile-version.png" title="Web Version"></a>  
@@ -89,7 +89,7 @@
             <hr class="intro-divider">
             <ul class="list-inline intro-social-buttons">
                 <li>
-                  <a href="https://play.google.com/store/apps/details?id=com.ionicframework.wordonthestreet"><img class="platform-version-button" src ="/img/android-version.png" title="Android Version"></a>
+                  <a href="https://play.google.com/store/apps/details?id=com.ionicframework.wordonthestreet" target="_blank"><img class="platform-version-button" src ="/img/android-version.png" title="Android Version"></a>
                 </li>
                 <li>
                   <a href="mobile.html"><img class="platform-version-button" src ="/img/mobile-version.png" title="Web Version"></a>  
